--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<h1><%= @product.name %></h1>
+<hr>
+<p><strong>ID:</strong> <%= @product.id %></p>
+<p><strong>SKU:</strong> <%= @product.sku %></p>
+<p><strong>Category:</strong> <%= @product.category %></p>
+<p><strong>Description:</strong> <%= @product.description %></p>
+<p><strong>Wholesale Price:</strong> <%= number_to_currency(@product.wholesale) %></p>
+<p><strong>Retail Price:</strong> <%= number_to_currency(@product.retail) %></p>
+<p><strong>Created:</strong> <%= @product.created_at %></p>
+<p><strong>Last Updated:</strong> <%= @product.updated_at %></p>
+<hr>
+<p>
+  <%= link_to "Edit Product", edit_product_path(@product), class: "btn btn-default" %>
+  <%= link_to "Delete Product", product_path(@product), method: :delete, class: "btn btn-default" %>
+</p>
